// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SaveAddressesButton with custom children /> 1`] = `
<span>
  Continue
</span>
`;

exports[`<SaveAddressesButton with props /> 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Continue
</button>
`;

exports[`<SaveAddressesButton/> 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Continue to delivery
</button>
`;
